fix spacing

--- a/css/general.css
+++ b/css/general.css
@@ -39,7 +39,7 @@ body{
 
 @media(max-width: 1100px){
 	.logo>img{
-		height: 150px;
+		height: 180px;
 	}
 }
 
